# molx

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
docs/: README.md  _sidebar.md  display-controls.md  faq.md  file-formats.md  getting-started.md  index.html  open-public-urls.md  register-and-share.md  self-hosting.md
docs/assets/: molx-docs.css
src/molx/: __init__.py  cli.py  config.py  db.py  main.py  schemas.py
src/molx/services/: __init__.py  display_settings.py  og_image.py  rate_limiter.py  structure_detector.py  structure_fetcher.py  structure_limits.py  structure_title.py
src/molx/static/: caffeine.xyz  main.css  main.html  main.js
src/molx/static/favicon/: about.txt
tests/: test_security.py
